Fix German man page for update-alternatives(8)

--- a/debian/changelog
+++ b/debian/changelog
@@ -41,6 +41,8 @@ dpkg (1.13.12~) unstable; urgency=low
     Closes: #345347, #347225, #348575
   * Fix Russian man page for start-stop-deamon(8)
     Closes: #325804
+  * Fix German man page for update-alternatives(8)
+    Closes: #247116
 
  --
 
