Make changelog junkies happy

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,14 +31,33 @@ dpkg (1.13.12~) unstable; urgency=low
     in the diff since these will get lost. Closes: #306125
 
   [Christian Perrier]
-  * General resync of all translations with my archive.
-    Closes: #344671, #325990, #344513, #344646, #332872, #314237
-    Closes: #315253, #315461, #315548, #315987, #315990, #323642
-    Closes: #323662, #323674, #323775, #323779, #323821, #323908
-    Closes: #323938, #323964, #324114, #324456, #325224, #325687
-    Closes: #330021, #332698, #334063, #335170, #337164, #337307
-    Closes: #337948, #338268, #338904, #340674, #342089, #344058
-    Closes: #345347, #347225, #348575
+  * Updated Translations (Christian Perrier):
+    - French (Christian Perrier).
+    - Polish (Bartosz Fenski). Closes: #314237
+    - Norwegian Bokmal (Hans F. Nordhaug). Closes: #315990
+    - Czech (Miroslav Kure). Closes: #323775
+    - Russian (Yuri Kozlov). Closes: #323821
+    - Japanese (Kenshi Muto). Closes: #323938
+    - Brazilian Portuguese (Andre Luis Lopes). Closes: #325224
+    - Russian (Yuri Kozlov). Closes: #335170
+    - Swedish (Peter karlsson). Closes: #325990, #344058, #337164, #334063
+    - Norwegian Nynorsk. Closes: #315987
+    - Portuguese (Miguel Figueiredo). Closes: #315461, #323674, #323642, #330021
+    - Spanish. Closes: #323662
+    - Danish. Closes: #323779, #337948, #325687
+    - Dutch. Closes: #323908
+    - German. Closes: #323964
+    - Italian. Closes: #324114, #344671, #347225
+    - Catalan. Closes: #324456
+    - Basque. Closes: #342089, #332698
+    - Tagalog. Closes: #337307
+    - Simplified Chinese. Closes: #338268
+    - Galician. Closes: #338904
+    - Romanian. Closes: #340674
+    - Vietnamese.
+    - Indonesian. Closes: #344513
+    - Greek. Closes: #344646
+    - Czech. Closes: #345347
   * Fix Russian man page for start-stop-deamon(8)
     Closes: #325804
   * Fix German man page for update-alternatives(8)
