Add missing bug numbers for translations. Acknowledge translators.

--- a/debian/changelog
+++ b/debian/changelog
@@ -31,10 +31,10 @@ dpkg (1.13.12~) unstable; urgency=low
     in the diff since these will get lost. Closes: #306125
 
   [Christian Perrier]
-  * Updated Translations (Christian Perrier):
+  * Updated Translations:
     - French (Christian Perrier).
     - Polish (Bartosz Fenski). Closes: #314237
-    - Norwegian Bokmal (Hans F. Nordhaug). Closes: #315990
+    - Norwegian Bokmal (Hans F. Nordhaug). Closes: #315548, #315990
     - Czech (Miroslav Kure). Closes: #323775
     - Russian (Yuri Kozlov). Closes: #323821
     - Japanese (Kenshi Muto). Closes: #323938
@@ -42,22 +42,25 @@ dpkg (1.13.12~) unstable; urgency=low
     - Russian (Yuri Kozlov). Closes: #335170
     - Swedish (Peter karlsson). Closes: #325990, #344058, #337164, #334063
     - Norwegian Nynorsk. Closes: #315987
-    - Portuguese (Miguel Figueiredo). Closes: #315461, #323674, #323642, #330021
-    - Spanish. Closes: #323662
-    - Danish. Closes: #323779, #337948, #325687
-    - Dutch. Closes: #323908
-    - German. Closes: #323964
-    - Italian. Closes: #324114, #344671, #347225
-    - Catalan. Closes: #324456
-    - Basque. Closes: #342089, #332698
-    - Tagalog. Closes: #337307
-    - Simplified Chinese. Closes: #338268
-    - Galician. Closes: #338904
-    - Romanian. Closes: #340674
-    - Vietnamese.
-    - Indonesian. Closes: #344513
+    - Portuguese (Miguel Figueiredo).
+      Closes: #315461, #323674, #323642, #330021
+    - Spanish (Javier Fernández-Sanguino Peña). Closes: #323662, #323662
+    - Danish (Claus Hindsgaul). Closes: #348575, #323779, #337948, #325687
+    - Dutch (Bart Cornelis). Closes: #323908
+    - German (Michael Piefel). Closes: #323964
+    - Italian (Stefano Canepa). Closes: #324114, #344671, #347225
+    - Catalan (Jordi Mallach). Closes: #324456
+    - Basque (Piarres Beobide). Closes: #342089, #332698
+    - Tagalog (Eric Pareja). Closes: #337307
+    - Simplified Chinese (Tchaikov). Closes: #338268
+    - Galician (Jacobo Tarrío). Closes: #338904
+    - Romanian (Eddy Petrişor). Closes: #340674
+    - Vietnamese (Phan Vinh Thinh).
+    - Indonesian (Parlin Imanuel). Closes: #344513
     - Greek. Closes: #344646
-    - Czech. Closes: #345347
+    - Czech (Miroslav Kure). Closes: #345347
+  * Fixed broken translation:
+    - Brazilian Portuguese (James Troup). Closes: #332872
   * Fix Russian man page for start-stop-deamon(8)
     Closes: #325804
   * Fix German man page for update-alternatives(8)
