Russian translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -39,7 +39,7 @@ dpkg (1.13.12~) unstable; urgency=low
     - Russian (Yuri Kozlov). Closes: #323821, #335170
     - Japanese (Kenshi Muto). Closes: #323938
     - Brazilian Portuguese (Andre Luis Lopes). Closes: #325224, #332872
-    - Russian (Yuri Kozlov). Closes: #335170
+    - Russian (Yuri Kozlov). Closes: #335170, #349151
     - Swedish (Peter karlsson). Closes: #325990, #344058, #337164, #334063
     - Norwegian Nynorsk. Closes: #315987
     - Portuguese (Miguel Figueiredo).
