--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-21 Yuri Kozlov  <kozlov.y@gmail.com>
+
+	* ru.po: updated to 1000t. Closes: #349151
+
 2006-01-18 Claus Hindsgaul  <claus_h@image.dk>
 
 	* da.po: updated to 1000t. Closes: #348575
