Vietnamese translation completed

--- a/debian/changelog
+++ b/debian/changelog
@@ -56,7 +56,7 @@ dpkg (1.13.12~) unstable; urgency=low
     - Simplified Chinese (Tchaikov). Closes: #338268
     - Galician (Jacobo Tarrío). Closes: #338904
     - Romanian (Eddy Petrişor). Closes: #340674
-    - Vietnamese (Phan Vinh Thinh).
+    - Vietnamese (Phan Vinh Thinh, Clytie Siddall).
     - Indonesian (Parlin Imanuel). Closes: #344513
     - Greek. Closes: #344646
     - Czech (Miroslav Kure). Closes: #345347
