--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-22 Clytie Siddall  <clytie@riverland.net.au>
+
+	* vi.po: updated to 1000t
+
 2006-01-21 Yuri Kozlov  <kozlov.y@gmail.com>
 
 	* ru.po: updated to 1000t. Closes: #349151
